--- a/Docs.Web/Layout/NavMenu.razor
+++ b/Docs.Web/Layout/NavMenu.razor
@@ -9,7 +9,7 @@
         <MudNavLink Href="/getting-started/installation" Match="NavLinkMatch.Prefix">Installation</MudNavLink>
     </MudNavGroup>
 
-    <MudNavLink Href="/overview" Match="NavLinkMatch.All">Overview</MudNavLink>
+    <MudNavLink Href="/" Match="NavLinkMatch.All">Overview</MudNavLink>
 
     <MudNavGroup Title="Components" Expanded="@(IsActive("components"))">
         <MudNavLink Href="/components/shift-blazor" Match="NavLinkMatch.Prefix">Overview</MudNavLink>
