--- a/Docs.Web/Layout/NavMenu.razor
+++ b/Docs.Web/Layout/NavMenu.razor
@@ -13,7 +13,7 @@
 
     <MudNavGroup Title="Components" Expanded="@(IsActive("components"))">
         <MudNavLink Href="/components/shift-blazor" Match="NavLinkMatch.Prefix">Overview</MudNavLink>
-        <MudNavLink Href="/components/shift-auto-complete" Match="NavLinkMatch.Prefix">Shift Auto Complete</MudNavLink>
+        <MudNavLink Href="/components/shift-autocomplete" Match="NavLinkMatch.Prefix">Shift Autocomplete</MudNavLink>
     </MudNavGroup>
 
     <MudNavGroup Title="Entities & Repositories" Expanded="@(IsActive("data"))">
