--- a/Docs.Web/Pages/Components/ShiftAutoCompleteDoc.razor
+++ b/Docs.Web/Pages/Components/ShiftAutoCompleteDoc.razor
@@ -1,14 +1,14 @@
-﻿@page "/components/shift-auto-complete"
+﻿@page "/components/shift-autocomplete"
 
 @using Docs.Web.Pages.Examples
 @using MudBlazor
 @using ShiftSoftware.ShiftBlazor.Components
 @using Docs.Shared.Customers
 
-<PageTitle>Shift Auto Complete | Shift Framework</PageTitle>
+<PageTitle>Shift Autocomplete | Shift Framework</PageTitle>
 
 <MudContainer Class="mt-15">
-    <MudText Typo="Typo.h4">Shift Auto Complete</MudText>
+    <MudText Typo="Typo.h4">Shift Autocomplete</MudText>
 
     <MudText>Search and Select <MudLink Color="Color.Warning">Shift Entities</MudLink> from a <MudLink Color="Color.Warning">Shift Entity Controller</MudLink> End-point.</MudText>
 </MudContainer>
@@ -84,7 +84,7 @@
             <ShiftAutocomplete EntitySet="Customer"
                                Label="Customer"
                                MultiSelect
-                               SelectedValueCounter
+                               GroupSelectedValues
                                TEntitySet="CustomerListDTO" />
         </div>
     </MudPaper>
