--- a/Docs.Web/Layout/NavMenu.razor
+++ b/Docs.Web/Layout/NavMenu.razor
@@ -5,11 +5,12 @@
 @inject NavigationManager NavigationManager
 
 <MudNavMenu Color="Color.Warning">
-    <MudNavGroup Title="Getting Started" Expanded="@(IsActive("getting-started"))">
-        <MudNavLink Href="/getting-started/installation" Match="NavLinkMatch.Prefix">Installation</MudNavLink>
+    <MudNavLink Href="/docs" Match="NavLinkMatch.All">Overview</MudNavLink>
+
+    <MudNavGroup Title="Getting Started" Expanded="@(IsActive("/docs/"))">
+        <MudNavLink Href="/docs/installation" Match="NavLinkMatch.Prefix">Installation</MudNavLink>
     </MudNavGroup>
 
-    <MudNavLink Href="/" Match="NavLinkMatch.All">Overview</MudNavLink>
 
     <MudNavGroup Title="Components" Expanded="@(IsActive("components"))">
         <MudNavLink Href="/components/shift-blazor" Match="NavLinkMatch.Prefix">Overview</MudNavLink>
