--- a/Docs.Web/Layout/NavMenu.razor
+++ b/Docs.Web/Layout/NavMenu.razor
@@ -12,8 +12,8 @@
     </MudNavGroup>
 
 
-    <MudNavGroup Title="Components" Expanded="@(IsActive("components"))">
-        <MudNavLink Href="/components/shift-blazor" Match="NavLinkMatch.Prefix">Overview</MudNavLink>
+    <MudNavGroup Title="Components" Expanded="@(IsActive("/components"))">
+        <MudNavLink Href="/components"  Match="NavLinkMatch.Prefix">Overview</MudNavLink>
         <MudNavLink Href="/components/shift-autocomplete" Match="NavLinkMatch.Prefix">Shift Autocomplete</MudNavLink>
     </MudNavGroup>
 
