--- a/Docs.Web/Pages/Components/ShiftAutoComplete/ShiftAutoComplete.razor
+++ b/Docs.Web/Pages/Components/ShiftAutoComplete/ShiftAutoComplete.razor
@@ -5,32 +5,80 @@
 @using ShiftSoftware.ShiftBlazor.Components
 @using Docs.Shared.Customers
 
-<PageTitle>Shift Autocomplete | Shift Framework</PageTitle>
+<PageTitle>Shift Autocomplete</PageTitle>
 
 <MudContainer Class="mt-15">
     <MudText Typo="Typo.h4">Shift Autocomplete</MudText>
 
-    <MudText>Search and Select <MudLink Color="Color.Warning">Shift Entities</MudLink> from a <MudLink Color="Color.Warning">Shift Entity Controller</MudLink> End-point.</MudText>
+    <MudText>Search and Select <MudLink Href="/entities" Color="Color.Warning">Shift Entities</MudLink> from a <MudLink Href="/entities/controller" Color="Color.Warning">Shift Entity Controller</MudLink> End-point.</MudText>
+
+    <MudText Class="mt-5">
+        ShiftAutocomplete &lt;TEntitySet&gt; is a highly customizable and powerful autocomplete component built on top of MudBlazor that provides real-time entity searching, selection, and optional quick-add capabilities. It is fully integrated with <MudLink Href="/entities" Color="Color.Warning">Shift Entities</MudLink> and <MudLink Href="/components/modals" Color="Color.Warning">Shift Modals</MudLink> services, supporting both <DocsHighlight>single</DocsHighlight> and <DocsHighlight>multi-select</DocsHighlight> modes, <DocsHighlight>dynamic filtering</DocsHighlight>, <DocsHighlight>templating</DocsHighlight>, and <DocsHighlight>form validation</DocsHighlight>.
+    </MudText>
+
+    <MudText Class="mt-8">
+        <div class="d-flex align-center gap-2">
+            <MudIcon Icon="@Icons.Custom.Uncategorized.AlertSuccess" Color="Color.Success" />
+            <b>Key Features:</b>
+        </div>
+
+        <ul class="ms-12 mt-4">
+            @foreach (var feature in ShiftAutocompleteFeatures)
+                {
+                    <li  class="mb-1">
+                        @feature
+                    </li>
+                }
+        </ul>
+        
+    </MudText>
 </MudContainer>
 
-<MudContainer Class="mt-15" MaxWidth="MaxWidth.False" Style="float: left;">
 
-    <MudText Typo="Typo.h6">Basic Usage</MudText>
-    <MudPaper Elevation="1" Class="mt-1">
-        <div class="d-flex">
-            <MudSpacer />
-            <MudButton Variant="Variant.Text" Color="Color.Warning" StartIcon="@Icons.Material.Filled.Code">
-                Code
-            </MudButton>
-        </div>
+<MudContainer Class="mt-15">
+    <MudText Typo="Typo.h4">📌 Prerequisite: Customer DTOs</MudText>
+    <MudText Class="mt-2">
+        One of the primary parameters of <DocsHighlight>Shift Autocomplete</DocsHighlight> is the <DocsHighlight>DTOs</DocsHighlight>, this documentation uses <DocsHighlight>Customer</DocsHighlight> and its DTOs. <br/>
+        So all the upcoming documentation examples assume the presence of two DTOs:
+        <ul class="ms-12 mt-2 mb-2">
+            <li class="mb-1"><DocsHighlight>CustomerDTO</DocsHighlight>: Used for creating or selecting a full customer object</li>
+            <li class="mb-1"><DocsHighlight>CustomerListDTO</DocsHighlight>: Used for lightweight display in selection lists (like autocompletes)</li>
+        </ul>
 
-        <div class="pa-5">
-            <ShiftAutocomplete EntitySet="Customer"
-                               Label="Customer"
-                               TEntitySet="CustomerListDTO" />
-        </div>
-    </MudPaper>
+        These DTOs are required for the proper functioning of components like <DocsHighlight>ShiftAutocomplete</DocsHighlight>, and you must define them in your shared project or models.
+    </MudText>
 
+    <MudText Class="mt-4 mb-2" Typo="Typo.h6">CustomerDTO.cs</MudText>
+    <CodeViewer file="CustomerDTOFile"/>
+
+    <MudText Class="mt-4 mb-2" Typo="Typo.h6">CustomerListDTO.cs</MudText>
+    <CodeViewer file="CustomerListDTOFile" />
+
+    <MudDivider Class="my-10" />
+
+
+    <MudText Typo="Typo.h5">Basic Usage</MudText>
+    <MudText Class="mt-5 mb-3">
+        <DocsHighlight>ShiftAutocomplete</DocsHighlight> requires a valid <DocsHighlight>EntitySet</DocsHighlight> and a corresponding <DocsHighlight>TEntitySet</DocsHighlight> that defines how the data appears in the selection list.
+
+        <br /><br />
+        In this basic usage example, we use the <DocsHighlight>Customer</DocsHighlight> entity with two supporting DTOs:
+        <ul class="ms-12 mt-2 mb-2">
+            <li><DocsHighlight>CustomerDTO</DocsHighlight> – used for representing and editing the full customer object.</li>
+            <li><DocsHighlight>CustomerListDTO</DocsHighlight> – used for displaying a simplified representation in the dropdown.</li>
+        </ul>
+        <br />
+        The examples below demonstrate the minimal setup required to get started with <DocsHighlight>ShiftAutocomplete</DocsHighlight>.
+    </MudText>
+    <DocCodeViewer DocComponent="@typeof(ShiftAutoCompleteBasicUse)" />
+
+    <MudDivider Class="my-10" />
+
+</MudContainer>
+
+
+
+<MudContainer Class="mt-15">
     <div class="mt-10"></div>
 
     <MudText Typo="Typo.h6">Clearable</MudText>
