--- a/Docs.Web/Pages/Components/ShiftAutoComplete/ShiftAutocompleteClearable.razor
+++ b/Docs.Web/Pages/Components/ShiftAutoComplete/ShiftAutocompleteClearable.razor
@@ -3,4 +3,5 @@
 
 <ShiftAutocomplete EntitySet="Customer"
                     Label="Customer"
+                    Clearable
                     TEntitySet="CustomerListDTO" />
