--- a/Docs.Web/Components/CodeViewer.razor
+++ b/Docs.Web/Components/CodeViewer.razor
@@ -1,7 +1,7 @@
 ﻿@using MudBlazor;
 
 <div style="position: relative;">
-    <div style="position: absolute;  right: 36px; top: 36px; z-index: 1; display: flex; gap: 16px;">
+    <div style="position: absolute;  right: 16px; top: 16px; z-index: 1; display: flex; gap: 16px;">
         <MudIconButton Color="Color.Primary"
                         Icon="@Icons.Material.Filled.Download"
                         OnClick="@(() => DownloadFile(file.FileName, file.Content))" />
@@ -10,7 +10,7 @@
                         Icon="@Icons.Material.Filled.ContentCopy"
                         OnClick="@(() => CopyToClipboard(file.Content))"/>
     </div>
-    <pre class="line-numbers">
+    <pre data-line="@file.Linehighlight" class="line-numbers">
         <code class="@file.PrismClass">@file.Content</code>
     </pre>
 </div>
