get code file from snippets folder

--- a/Docs.Web/Layout/MainLayout.razor
+++ b/Docs.Web/Layout/MainLayout.razor
@@ -27,7 +27,7 @@
     }
 
     <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.False">
+        <MudContainer Class="pb-10" MaxWidth="MaxWidth.False">
             @Body
         </MudContainer>
     </MudMainContent>
