--- a/Docs.Web/Pages/Components/ShiftAutoComplete/Index.razor
+++ b/Docs.Web/Pages/Components/ShiftAutoComplete/Index.razor
@@ -46,6 +46,14 @@
             <li><DocsHighlight>CustomerListDTO</DocsHighlight> – used for displaying a simplified representation in the dropdown.</li>
         </ul>
         <br />
+
+        This Example Highlights this basic features:
+        <ul class="ms-12 mt-2 mb-2">
+            <li>Using entity <DocsHighlight>Customer</DocsHighlight> to perform the searches.</li>
+            <li>The input has 200ms deboundcer</li>
+            <li>Property <DocsHighlight>Label</DocsHighlight> => input place holder text</li>
+        </ul>
+        <br />
         The examples below demonstrate the minimal setup required to get started with <DocsHighlight>ShiftAutocomplete</DocsHighlight>.
     </MudText>
 </DocComponentVariant>
@@ -198,4 +206,9 @@
     <div class="mt-10"></div>
 
     <div class="mt-10"></div>
+</MudContainer>
+
+
+<MudContainer>
+    <MudText>APIs:</MudText>
 </MudContainer>
