--- a/Docs.Web/Pages/Examples/CustomerForm.razor
+++ b/Docs.Web/Pages/Examples/CustomerForm.razor
@@ -11,7 +11,7 @@
 <ShiftEntityForm @bind-Mode="Mode"
                  @bind-Value="TheItem"
                  @ref="FormContainer"
-                 Action="Customer"
+                 Endpoint="Customer"
                  Title="Customer"
                  TypeAuthAction="null"
                  @bind-Key="@Key">
