--- a/Docs.Web/Layout/NavMenu.razor
+++ b/Docs.Web/Layout/NavMenu.razor
@@ -14,6 +14,7 @@
     <MudNavGroup Title="Components" Expanded="@(IsActive("components"))">
         <MudNavLink Href="/components/shift-blazor" Match="NavLinkMatch.Prefix">Overview</MudNavLink>
         <MudNavLink Href="/components/shift-autocomplete" Match="NavLinkMatch.Prefix">Shift Autocomplete</MudNavLink>
+        <MudNavLink Href="/components/file-explorer" Match="NavLinkMatch.Prefix">File Explorer</MudNavLink>
     </MudNavGroup>
 
     <MudNavGroup Title="Entities & Repositories" Expanded="@(IsActive("data"))">
