--- a/Docs.Web/_Imports.razor
+++ b/Docs.Web/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Docs.Web
+@using MudBlazor
+@using ShiftSoftware.ShiftBlazor.Components
