--- a/Docs.Web/Pages/Components/ShiftAutoComplete/Index.razor
+++ b/Docs.Web/Pages/Components/ShiftAutoComplete/Index.razor
@@ -11,7 +11,7 @@
     <MudText>Search and Select <MudLink Href="/entities" Color="Color.Warning">Shift Entities</MudLink> from a <MudLink Href="/entities/controller" Color="Color.Warning">Shift Entity Controller</MudLink> End-point.</MudText>
 
     <MudText Class="mt-5">
-        ShiftAutocomplete &lt;TEntitySet&gt; is a highly customizable and powerful autocomplete component built on top of MudBlazor that provides real-time entity searching, selection, and optional quick-add capabilities. It is fully integrated with <MudLink Href="/entities" Color="Color.Warning">Shift Entities</MudLink> and <MudLink Href="/components/modals" Color="Color.Warning">Shift Modals</MudLink> services, supporting both <DocsHighlight>single</DocsHighlight> and <DocsHighlight>multi-select</DocsHighlight> modes, <DocsHighlight>dynamic filtering</DocsHighlight>, <DocsHighlight>templating</DocsHighlight>, and <DocsHighlight>form validation</DocsHighlight>.
+        ShiftAutocomplete is a highly customizable and powerful autocomplete component built on top of MudBlazor that provides real-time entity searching, selection, and optional quick-add capabilities. It is fully integrated with <MudLink Href="/entities" Color="Color.Warning">Shift Entities</MudLink> and <MudLink Href="/components/modals" Color="Color.Warning">Shift Modals</MudLink> services, supporting both <DocsHighlight>single</DocsHighlight> and <DocsHighlight>multi-select</DocsHighlight> modes, <DocsHighlight>dynamic filtering</DocsHighlight>, <DocsHighlight>templating</DocsHighlight>, and <DocsHighlight>form validation</DocsHighlight>.
     </MudText>
 
     <MudText Class="mt-8">
@@ -59,7 +59,7 @@
 
 
 
-<DocComponentVariant Title="Clearable" DocComponent="@typeof(ShiftAutocompleteClearable)"></DocComponentVariant>
+<DocComponentVariant Title="Clearable" Linehighlight="6" DocComponent="@typeof(ShiftAutocompleteClearable)"></DocComponentVariant>
 
 <MudContainer Class="mt-15">
 
