--- a/Docs.Web/Components/DocComponentVariant.razor
+++ b/Docs.Web/Components/DocComponentVariant.razor
@@ -12,7 +12,7 @@
     
     @ChildContent
     
-    <DocCodeViewer DocComponent="DocComponent" />
+    <DocCodeViewer Linehighlight="@Linehighlight" DocComponent="DocComponent" />
 
     <MudDivider Class="my-10" />
 
