Add null check for _mudThemeProvider in mainlayout

--- a/Docs.Web/Layout/MainLayout.razor
+++ b/Docs.Web/Layout/MainLayout.razor
@@ -36,7 +36,7 @@
 
 @code {
     private bool _isDarkMode;
-    private MudThemeProvider _mudThemeProvider;
+    private MudThemeProvider? _mudThemeProvider;
     private MudTheme _theme = new()
     {
         PaletteLight = new PaletteLight()
@@ -53,7 +53,7 @@
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if (firstRender)
+        if (firstRender && _mudThemeProvider != null)
         {
             _isDarkMode = await _mudThemeProvider.GetSystemDarkModeAsync();
             StateHasChanged();
