--- a/Docs.Web/Pages/Components/ShiftAutoComplete/CustomerInvoiceList.razor
+++ b/Docs.Web/Pages/Components/ShiftAutoComplete/CustomerInvoiceList.razor
@@ -1,4 +1,4 @@
-﻿@attribute [Route($"/{nameof(InvoiceList)}")]
+﻿@attribute [Route($"/{nameof(CustomerInvoiceList)}")]
 
 @using ShiftSoftware.ShiftBlazor.Components
 @using ShiftSoftware.ShiftIdentity.Core.DTOs.City
@@ -25,5 +25,3 @@
                    EntitySet="Customer" />
 </ShiftList>
 
-@code {
-}
