--- a/Docs.Web/Pages/Components/ShiftAutoComplete/Index.razor
+++ b/Docs.Web/Pages/Components/ShiftAutoComplete/Index.razor
@@ -1,7 +1,7 @@
-﻿@page "/components/shift-autocomplete"
+﻿@page "/components/shift-auto-complete"
 
-@using Docs.Web.Pages.Examples
 @using Docs.Shared.Customers
+@using ShiftSoftware.ShiftBlazor.Components
 
 <PageTitle>Shift Autocomplete</PageTitle>
 
@@ -107,30 +107,10 @@
     </PostCodeSnippet>
 </DocComponentVariant>
 
-
-<MudContainer Class="mt-15">
-    <div class="mt-10"></div>
-
-    <MudText Typo="Typo.h6">Shift List Integration (Filtering)</MudText>
-    <MudPaper Elevation="1" Class="mt-1">
-        <div class="d-flex">
-            <MudSpacer />
-            <MudButton Variant="Variant.Text" Color="Color.Warning" StartIcon="@Icons.Material.Filled.Code">
-                Code
-            </MudButton>
-        </div>
-
-        <div class="pa-5">
-            <InvoiceList />
-        </div>
-    </MudPaper>
-
-    <div class="mt-10"></div>
-
-    <div class="mt-10"></div>
-</MudContainer>
-
-
-<MudContainer>
-    <MudText>APIs:</MudText>
-</MudContainer>
+<DocComponentVariant Title="Shift List Integration (Filtering)" Linehighlight="18" DocComponent="@typeof(CustomerInvoiceList)">
+    <MudText Class="mt-5 mb-3">
+        <DocsHighlight>ShiftAutocomplete</DocsHighlight> can be used to filter <DocsHighlight>ShiftList</DocsHighlight> components.
+        <br />
+        In this example, we integrate <DocsHighlight>ShiftAutocomplete</DocsHighlight> within a <DocsHighlight>ShiftList</DocsHighlight> to filter invoices by customer. This is achieved by adding a <DocsHighlight>ForeignFilter</DocsHighlight> component that utilizes <DocsHighlight>ShiftAutocomplete</DocsHighlight> for selecting customers, allowing users to easily filter the invoice list based on their selection.
+    </MudText>
+</DocComponentVariant>
