--- a/Docs.Web/Pages/Components/ShiftAutoComplete/IndexAPI.razor
+++ b/Docs.Web/Pages/Components/ShiftAutoComplete/IndexAPI.razor
@@ -15,6 +15,6 @@
         </MudLink>.
     </MudText>
 
-    <AutoComponentDocs ComponentType="typeof(ShiftAutocomplete<>)" />
-
 </MudContainer>
+
+<AutoComponentDocs Title="ShiftAutocomplete APIs:" ComponentType="typeof(ShiftAutocomplete<>)" />
